# llm-crawler-bench

./: .gitignore  CLAUDE.md  Dockerfile  IMPROVE.md  Makefile  README.md  benchmark_all_tools.py  benchmark_answer_quality.py  benchmark_markcrawl.py  benchmark_pipeline.py  benchmark_quality.py  benchmark_retrieval.py  crawlee_worker.py  generate_readme.py  lint_reports.py  pyproject.toml  quality_scorer.py  report_utils.py  run_benchmarks.sh  test_crawl4ai_graduated.py
.github/workflows/: ci.yml  sync-readme.yml
reports/: ANSWER_QUALITY.md  COST_AT_SCALE.md  MARKCRAWL_RESULTS.md  METHODOLOGY.md  PIPELINE_TIMING.md  QUALITY_COMPARISON.md  RETRIEVAL_COMPARISON.md  SPEED_COMPARISON.md
runners/: README.md  markcrawl_runner.py  playwright_runner.py
self_improvement/: 02_benchmark_code_review.md  MASTER.md  check_cross_report_consistency.py  check_invariants.py  sync_markcrawl.py  sync_readme.py
sites/: pool.py  test_pool.py
tools/firecrawl/: setup.sh
